--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.42.0"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "precss": "^4.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "4.4.3"
   }
 }
